# ftl-gen

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
bugs/: cli.txt
docs/: deep-modding-research.md  game-integration.md  plan.md  xml-modding-limits.md
docs/binary-patching/: README.md  phase1-recon.md  phase2-ghidra.md  phase3-patcher.md  phase4-trampoline.md  phase5-integration.md
mods/: BombTest.ftl  ChaosMode_80.ftl  DroneTest.ftl  Echoes of Hyrule.ftl  NanoTest.ftl  SpriteTest.ftl  The Prototype Initiative.ftl
mods/BombTest/data/: animations.xml.append  blueprints.xml.append
mods/BombTest/mod-appendix/: metadata.xml
mods/ChaosMode_80/data/: animations.xml.append  blueprints.xml.append
mods/ChaosMode_80/mod-appendix/: metadata.xml
mods/DroneTest/data/: animations.xml.append  blueprints.xml.append
mods/DroneTest/mod-appendix/: metadata.xml
mods/Echoes of Hyrule/data/: animations.xml.append  blueprints.xml.append  events.xml.append
mods/Echoes of Hyrule/mod-appendix/: metadata.xml
mods/NanoTest/data/: animations.xml.append  blueprints.xml.append
mods/NanoTest/mod-appendix/: metadata.xml
mods/SpriteTest/data/: animations.xml.append  (+1 more)
src/ftl_gen/: __init__.py  __main__.py  cli.py  config.py  constants.py
tests/: __init__.py  test_balance.py  test_binary_patcher.py  test_binary_recon.py  test_data_layer.py  test_diagnostics.py  test_ghidra_agent.py  test_image_gen.py  test_llm_client.py  test_mod_builder.py  test_xml_builders.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx
(+80 files in other folders)
